--- a/src/app/products/detail/detail.component.html
+++ b/src/app/products/detail/detail.component.html
@@ -17,4 +17,11 @@
             <img src="https://picsum.photos/300" alt="">
         </div>
     </div>
+    <hr class="my-6">
+
+    <div class="flex justify-end gap-4">
+        <a routerLink="/products/{{product.id}}/edit" class="border-2 border-blue-500 hover:bg-blue-300 py-2 px-4 rounded-lg">Edit product</a>
+        <button (click)="onDelete()" class="border-2 border-red-500 hover:bg-red-300 py-2 px-4 rounded-lg">Delete product</button>
+    </div>
+
 </div>
