--- a/src/app/products/new/new.component.html
+++ b/src/app/products/new/new.component.html
@@ -1,1 +1,24 @@
-<p>new works!</p>
+<div class="p-10">
+    <form [formGroup]="addForm" (ngSubmit)="onSubmit()">
+        <div class="mb-4 space-x-4">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" class="border border-gray-300" required formControlName="name">
+            <div class="text-red-500" *ngIf="addForm.get('name')?.touched && addForm.get('name')?.errors?.['required']">Name is required</div>
+            <div class="text-red-500" *ngIf="addForm.get('name')?.touched && addForm.get('name')?.errors?.['minlength']">Name must be at least {{addForm.get('name')?.errors?.['minlength']?.requiredLength}} characters</div>
+            <!-- <div class="text-red-500 text-sm" [hidden]="name.valid || name.untouched">Name is required</div> -->
+        </div>
+        <div class="mb-4 space-x-4">
+            <label for="price">Price</label>
+            <input type="number" name="price" id="price" class="border border-gray-300" formControlName="price">
+            <div class="text-red-500" *ngIf="addForm.get('price')?.touched && addForm.get('price')?.invalid">Price is required</div>
+            <div class="text-red-500" *ngIf="addForm.get('price')?.invalid && addForm.get('price')?.touched">Price is invalid</div>
+        </div>
+        <div class="mb-4">
+            <label for="message" class="block pb-2">Description</label>
+            <textarea name="description" id="description" cols="30" rows="10" class="border border-gray-300" formControlName="description"></textarea>
+        </div>
+        <div>
+            <button type="submit" [disabled]="addForm.invalid" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg disabled:bg-gray-300">Send</button>
+        </div>
+    </form>
+</div>
